@@ -4,6 +4,7 @@
 
 =head2 5.28 - Jul 
  
+   detect location of maillogs when configuring /etc/mailer.conf
    allow building qmail with no patches
    explicitly include a few more perl modules required by SpamAssassin
    automatically password protect isoqlog in apache vhost file
